Added footer component, modified some styles from information-container component as well as the navbar component

--- a/src/components/information-container/information-container.scss
+++ b/src/components/information-container/information-container.scss
@@ -1,6 +1,6 @@
 .information-container {
   display: grid;
-  grid-template-columns: 500px 500px;
+  grid-template-columns: 700px 700px;
   justify-content: space-evenly;
-  margin: 60px 0 20px 0;
+  margin: 60px 0 20px;
 }
