--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -4,22 +4,28 @@
   align-items: center;
   background-color: #94E8C9;
   height: 60px;
-  padding: 0 25px;
+  padding: 0 30px;
 
   .navbar-title {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: 400;
   }
 
   .links-container {
+    width: 25%;
     display: flex;
-    justify-content: flex-end;
-  }
+    justify-content: space-between;
 
-  .link {
-    text-decoration: none;
-    color: black;
-    margin: 0 15px;
-    font-size: 14px;
+    .link {
+      text-decoration: none;
+      color: black;
+      font-size: 16px;
+  
+      &:hover {
+        transform:scale(1.1);
+        color:darkorchid;
+        font-weight: 400;
+      }
+    }
   }
 }
