--- a/src/components/personalized-container/personalized-container.styles.scss
+++ b/src/components/personalized-container/personalized-container.styles.scss
@@ -5,8 +5,18 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  line-height: 1.8rem;
-  padding: 8px 15px;
-  border-radius: 10px;
+  line-height: 2rem;
+  padding: 15px 40px;
+  border-radius: 5px;
+
+  .container-title {
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .container-information {
+    font-size: 18px;
+  }
+
 }
 
