--- a/src/components/contribute/contribute.styles.scss
+++ b/src/components/contribute/contribute.styles.scss
@@ -1,6 +1,6 @@
 .contribute-container {
   width: 90%;
-  background-color: #94E8C9;
+  background-color: #94e8c9;
   color: black;
   margin: 40px auto;
   padding: 30px 20px;
@@ -40,6 +40,38 @@
       transform: scale(1.02);
       transition: 0.3s;
     }
-    
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .contribute-container {
+    flex-direction: column;
+    margin: 15px auto;
+    padding: 0;
+    width: 80%;
+
+    .contribute-image {
+      width: 120px;
+      margin-bottom: 10px;
+    }
+
+    .information-container {
+      width: 80%;
+
+      .contribute-title {
+        font-size: 18px;
+      }
+
+      .contribute-text {
+        font-size: 12px;
+        line-height: 1.5rem;
+      }
+
+      .contribute-link {
+        max-width: 100px;
+        font-size: 10px;
+        height: 30px;
+      }
+    }
   }
 }
