--- a/src/components/information-container/information-container.scss
+++ b/src/components/information-container/information-container.scss
@@ -4,3 +4,11 @@
   justify-content: space-evenly;
   margin: 60px 0 20px;
 }
+
+@media only screen and (max-width: 680px) {
+  .information-container {
+    grid-template-columns: 280px;
+    margin: 30px auto;
+    row-gap: 20px;
+  }
+}
