--- a/src/components/personalized-container/personalized-container.styles.scss
+++ b/src/components/personalized-container/personalized-container.styles.scss
@@ -1,5 +1,5 @@
 .container {
-  background-color: #94E8C9;
+  background-color: #94e8c9;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,6 +17,19 @@
   .container-information {
     font-size: 18px;
   }
-
 }
 
+@media only screen and (max-width: 680px) {
+  .container {
+    padding: 10px 20px;
+    line-height: 1.4rem;
+
+    .container-title {
+      font-size: 16px;
+    }
+
+    .container-information {
+      font-size: 14px;
+    }
+  }
+}
