--- a/src/components/price/price.styles.scss
+++ b/src/components/price/price.styles.scss
@@ -28,7 +28,7 @@
   }
 }
 
-@media only screen and (max-width: 680px) {
+@media screen and (max-width: 480px) {
   .price-container {
     margin: 60px auto;
     padding: 12px;
