--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -30,7 +30,26 @@
   }
 }
 
-@media only screen and (max-width: 680px) {
+@media screen and (max-width: 800px) {
+  .navbar {
+    padding: 0 20px;
+
+    .navbar-title {
+      font-size: 22px;
+    }
+
+    .links-container {
+      width: 40%;
+      justify-content: space-between;
+    }
+
+    .link {
+      font-size: 15px;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
   .navbar {
     padding: 0 15px;
 
@@ -46,25 +65,6 @@
       .link {
         font-size: 12px;
       }
-    }
-  }
-}
-
-@media only screen and (max-width: 980px) {
-  .navbar {
-    padding: 0 20px;
-
-    .navbar-title {
-      font-size: 22px;
-    }
-
-    .links-container {
-      width: 40%;
-      justify-content: space-between;
-    }
-
-    .link {
-      font-size: 15px;
     }
   }
 }
