--- a/src/components/personalized-container/personalized-container.styles.scss
+++ b/src/components/personalized-container/personalized-container.styles.scss
@@ -7,7 +7,7 @@
   text-align: center;
   line-height: 2rem;
   padding: 15px 40px;
-  border-radius: 5px;
+  border-radius: 6px;
 
   .container-title {
     font-size: 20px;
@@ -19,22 +19,7 @@
   }
 }
 
-@media only screen and (max-width: 680px) {
-  .container {
-    padding: 10px 20px;
-    line-height: 1.4rem;
-
-    .container-title {
-      font-size: 16px;
-    }
-
-    .container-information {
-      font-size: 14px;
-    }
-  }
-}
-
-@media only screen and (max-width: 980px) {
+@media screen and (max-width: 800px) {
   .container {
     padding: 10px 20px;
     line-height: 2.2rem;
@@ -45,6 +30,21 @@
 
     .container-information {
       font-size: 18px;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 10px 25px;
+    line-height: 1.6rem;
+
+    .container-title {
+      font-size: 16px;
+    }
+
+    .container-information {
+      font-size: 14px;
     }
   }
 }
